# unbound-api-python

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  mise.toml  pyproject.toml  tox.ini
docker/: Dockerfile  docker-compose.yaml
docker/api/: .env.local
docker/dns/: unbound.conf
docker/dns/server.d/: default_transparent.conf  directory.conf  logging.conf  performance.conf  security.conf  trust-anchor.conf
docker/dns/ssl/: unbound_control.key  unbound_control.pem  unbound_server.key  unbound_server.pem
src/unboundapi/: app.py  gunicorn_config.py  main.py  server.py
src/unboundapi/config/: ConfigEntry.py  UnboundConfig.py  __init__.py  config.py
tests/: test_ConfigEntry.py  test_UnboundConfig.py
tests/files/test_UnboundConfig/: after_target.conf  input.conf  target.conf
