[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "unboundapi"
version = "0.1.0"
description = "REST Api for the Unbound DNS Server"
authors = ["Arthur Réauté <arthur@platy.bzh>"]
readme = "README.md"

[tool.poetry.scripts]
unbound-cli = "unboundapi.main:main"

[tool.poetry.dependencies]
python = ">=3.10"
datetime = ">=5.5"
click = "^8.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
pyright = "^1.1.335"
pytest = "^8.1.1"
tox = "^4.14.2"

[tool.pyright]
venvPath = "."
venv = ".venv"
